# Machine_translation_model

./: .gitignore  1  Cargo.toml  README.md
examples/: sentence_tokenizer_0.rs  words_tokenizer_0.rs  words_tokenizer_eng_fra.rs
src/: .word_vocabs.rs.swp  lib.rs  lib1.rs  main.rs  probability.rs  sentence_dynamic.rs  sentence_pairs.rs  system_dynamic.rs  system_dynamics.rs  targets_to_sentences.rs  token.rs  token_merges.rs  token_pairs.rs  tokens_vocab.rs  translation_corpus.rs  word_vocabs.rs  words_dynamic.rs
src/probability/: length_likelihood.rs
src/read_write/: read_write_serde.rs
src/targets_to_sentences/: targets_to_lengths.rs
src/word_dynamics/: dynamics.rs
