[package]
name = "machine_translation"
version = "0.1.0"
authors = ["dmitri9149"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "translationlib"
path = "src/lib.rs"

[dependencies]
serde = { version = " 1.0.117", features = ["derive"] }
