[package]
name = "machine_translation"
version = "0.1.0"
authors = ["dmitri9149"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "translationlib"
path = "src/lib.rs"

[dependencies]
serde = { version = " 1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.14"
ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
